<resources>
    <string name="app_name">My Money Manager</string>
    <string name="open">Open</string>
    <string name="menu_budgetPlan">Budget Plan</string>
    <string name="menu_savingsPlan">Savings Plan</string>
    <string name="menu_purchaseTrends">Purchase Trends</string>
    <string name="button_makePurchase">Make Purchase</string>
    <string name="label_currentAvailable">Available Amount</string>
    <string name="label_currentSpent">Amount Spent</string>
    <string name="label_PayPeriodInfo">Current Pay Period</string>
    <string name="label_EndPayPeriod">YAY ITS PAYDAY!! You were </string>
    <string name="button_StartNewPeriod">Start New Pay Period</string>
    <string name="label_Allowance">Allowance</string>
    <string name="lable_Savings">Saving</string>
</resources>
