<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainPage"
    tools:context="com.example.me.mymoneymanager.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button"
            android:layout_width="157dp"
            android:layout_height="44dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="MakePurchase"
            android:text="@string/button_makePurchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.631" />

        <TextView
            android:id="@+id/amountAvailable"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.321" />

        <TextView
            android:id="@+id/amountSpent"
            android:layout_width="171dp"
            android:layout_height="41dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/amountAvailable"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.321" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_currentAvailable"
            app:layout_constraintBottom_toTopOf="@+id/amountAvailable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.663" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_currentSpent"
            app:layout_constraintBottom_toTopOf="@+id/amountSpent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.674"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.663" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/navView"
        app:menu="@menu/my_menu_items"
        android:layout_gravity ="start"/>
</android.support.v4.widget.DrawerLayout>
